--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="!scroll-smooth">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/react.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/photos/avtar_jitesh.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jitesh Prajapati - Software Engineer</title>
   </head>
